SERVER-57952 Re-add DonorStateEnum::kPreparingToBlockWrites.