src/mongo/db/s/resharding/resharding_metrics.cpp
@@ -503,7 +503,7 @@ void ReshardingMetrics::onWriteDuringCriticalSection(int64_t writes) noexcept {
         return;
 
     invariant(checkState(*_currentOp->donorState,
-                         {DonorStateEnum::kDonatingOplogEntries,
+                         {DonorStateEnum::kPreparingToBlockWrites,
                           DonorStateEnum::kBlockingWrites,
                           DonorStateEnum::kError}));
 
