src/mongo/db/s/resharding/resharding_service_test_helpers.cpp
@@ -67,11 +67,13 @@ template <class StateEnum>
 void StateTransitionController<StateEnum>::_notifyNewStateAndWaitUntilUnpaused(
     OperationContext* opCtx, StateEnum newState) {
     stdx::unique_lock lk(_mutex);
+    auto guard = makeGuard([this, prevState = _state] { _state = prevState; });
     _state = newState;
     _waitUntilUnpausedCond.notify_all();
     opCtx->waitForConditionOrInterrupt(_pauseDuringTransitionCond, lk, [this, newState] {
         return _pauseDuringTransition.count(newState) == 0;
     });
+    guard.dismiss();
 }
 
 template <class StateEnum>
